# RaftCPP

./: .gitignore  CMakeLists.txt  README.md  dependencies  main.cpp
config/: config-onenode  config.txt
lib/glog/: Makefile  config.status  demangle_unittest  libglog.la  libtool  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
lib/glog/.libs/: demangle_unittest  libglog.0.dylib  libglog.lai  logging_striptest0  logging_striptest10  logging_striptest2  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
lib/glog/src/: config.h
lib/glog/src/.deps/: demangle_unittest-demangle_unittest.Po  libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_striptest0-logging_striptest_main.Po  logging_striptest10-logging_striptest10.Po  logging_striptest2-logging_striptest2.Po  logging_unittest-logging_unittest.Po  signalhandler_unittest-signalhandler_unittest.Po  stacktrace_unittest-stacktrace_unittest.Po  stl_logging_unittest-stl_logging_unittest.Po  symbolize_unittest-symbolize_unittest.Po  utilities_unittest-utilities_unittest.Po
protofiles/: CMakeLists.txt  raft.proto
src/: CMakeLists.txt  common.h  consensus_log.cpp  consensus_log.h  main.cpp  raft.cpp  raft.h  raft.rpcz.cc  raft.rpcz.h  rpc.sh  search.rpcz.cc  search.rpcz.h  struct.h
tests/: CMakeLists.txt  basic_test.cpp
